--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: Faraz
 last_name: Khan
 email: ahmadfk@vt.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-
+Ahmad Faraz Khan | CS Ph.D. candidate @ Virginia Tech | ML Systems Researcher
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
