--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,9 @@ middle_name: Faraz
 last_name: Khan
 email: ahmadfk@vt.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-Ahmad Faraz Khan | CS Ph.D. candidate @ Virginia Tech | ML Systems Researcher
+Ahmad Faraz Khan - CS Ph.D. candidate @ Virginia Tech - ML Systems Researcher
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: Ahmad Faraz Khan, Machine Learning Systems, Federated Learning # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: website_icon.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
