--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -36,13 +36,13 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'  # Not needed with a .ruby-version file
+          ruby-version: "3.1" # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
       - name: Setup Python and Install Jupyter
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'  # Choose the Python version that matches your needs
+          python-version: "3.8" # Choose the Python version that matches your needs
         run: |
           python -m pip install --upgrade pip
           pip install notebook jupyter
